# learn-generative-ai

02_python_crash_course/python_crash_course_book_code_with_typing/chapter_2/: apostrophe.py  full_name_1.py
02_python_crash_course/python_crash_course_book_code_with_typing/chapter_3/: bicycles.py
02_python_crash_course/python_crash_course_book_code_with_typing/chapter_4/: dimensions_0_first_version.py  dimensions_1_error_change_value.py  dimensions_2_lopping.py  dimensions_4_writing_over_tuple.py  even_numbers.py  first_numbers_2_list_of_numbers.py  foods_0_first_version.py  foods_1_new_foods.py  foods_2_incorrect_approach.py  hello_world_0_error_indenting_unnecessarily.py  magicians_0_first_version.py  magicians_1_great_trick.py  magicians_2_next_trick.py  (+14 more)
04_everything_is_an_api/01_requests/: compose.yaml
04_everything_is_an_api/05_docstring/: compose.yaml
04_everything_is_an_api/07_fastapi/: compose.yaml
04_everything_is_an_api/07_fastapi/my-project/: .env  Dockerfile  pyproject.toml
04_everything_is_an_api/07_fastapi/my-project/myproject/: app.py  service.py
04_everything_is_an_api/07_fastapi/my-project/myproject/model/: model.py
05_microservices_all_in_one_platform/10_microservice_helloworld/: compose.yaml
05_microservices_all_in_one_platform/10_microservice_helloworld/fastapi_helloworld_online/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
05_microservices_all_in_one_platform/10_microservice_helloworld/fastapi_helloworld_online/app/: main.py
05_microservices_all_in_one_platform/compose_db/: compose.yaml
05_microservices_all_in_one_platform/compose_db/compose_db/: .env  pyproject.toml
05_microservices_all_in_one_platform/compose_db/compose_db/app/: main.py  settings.py
docker/: compose.yaml
docker/helloworld_1/: Dockerfile.dev  hello.py
docker/helloworld_2/: hello.py
docker/helloworld_3/: Dockerfile.dev
docker/helloworld_4/: hello.py
docker/helloworld_5/: hello.py
docker/jupyter_notebook/: compose.yaml
(+198 files in other folders)
