[tool.poetry]
name = "fastapi-helloworld"
version = "0.1.0"
description = ""
authors = ["poonyfatima <fatimazahra9736@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
sqlmodel = "^0.0.22"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
